# robot_exploration

./: README.md
exploration_manager/: CMakeLists.txt  package.xml
exploration_manager/action/: RequestExploration.action
exploration_manager/behavior_trees/: exploration_bt.xml
exploration_manager/config/: exploration_bt.xml  exploration_config.yaml  exploration_config_centauro.yaml
exploration_manager/include/exploration_manager/: CheckExplorationRequest.h  CheckLocomotionStatus.h  CollectFrontiers.h  CollectObjectPose.h  Explore.h  GetExplorationRequest.h  IsExplorationRequired.h  SendNavPose.h  SharedClass.h  check_exploration_request.h  check_locomotion_status.h  collect_frontiers.h  collect_object_pose.h  common.h  explore.h  is_exploration_required.h  send_nav_pose.h
exploration_manager/launch/: centauro_3d_exploration.launch  exploration_manager.launch  exploration_manager.launch.py  kyon_3d_exploration.launch
exploration_manager/src/: CheckExplorationRequest.cpp  CheckLocomotionStatus.cpp  CollectFrontiers.cpp  CollectObjectPose.cpp  Explore.cpp  GetExplorationRequest.cpp  IsExplorationRequired.cpp  SendNavPose.cpp  check_exploration_request.cpp  check_locomotion_status.cpp  collect_frontiers.cpp  collect_object_pose.cpp  exploration_main.cpp  explore.cpp  is_exploration_required.cpp  send_nav_pose.cpp
exploration_manager_actions/: CMakeLists.txt  package.xml
frontier_extraction/: CMakeLists.txt  README.md  package.xml
frontier_extraction/config/: frontier2d_extraction_params.yaml  frontier3d_extraction_params.yaml
frontier_extraction/include/frontier_extraction/: Frontier2DExtractionManager.h  Frontier3DExtractionManager.h  FrontierExtractionManager.h  frontier_2d_extraction_manager.h  frontier_3d_extraction_manager.h
frontier_extraction/launch/: feature_extraction.launch  frontier_extraction.launch  frontier_extraction_launch.py
frontier_extraction/msg/: Frontier.msg
frontier_extraction/src/: Frontier2DExtractionManager.cpp  Frontier2DExtractionNode.cpp  Frontier3DExtractionManager.cpp  Frontier3DExtractionNode.cpp  FrontierExtractionManager.cpp  FrontierExtractionNode.cpp  frontier_2d_extraction_manager.cpp  frontier_2d_extraction_node.cpp  frontier_3d_extraction_manager.cpp  frontier_3d_extraction_node.cpp
frontier_extraction/srv/: GetFrontiers.srv
frontier_extraction_msgs/: CMakeLists.txt  package.xml
frontier_extraction_srvs/: CMakeLists.txt  package.xml
frontier_extraction_srvs/srv/: GetFrontiers.srv
gazebo_odom/: CMakeLists.txt  README.md  package.xml
gazebo_odom/config/: eurobin_view.rviz
gazebo_odom/launch/: gazebo_odom.launch  start_simulation.launch  start_simulation.launch.py
gazebo_odom/src/: sim_odom_connect.cpp
gazebo_odom/world/: exploration_world.world  exploration_world2.world  exploration_world3.world
room_extractor/: CMakeLists.txt  README.md  package.xml
room_extractor/scripts/: RoomExtractor.py
