<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frontier_extraction</name>
  <version>1.0.0</version>
  <description>frontier_extraction</description>

  <maintainer email="alessio.deluca@iit.it">Alessio De Luca</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>frontier_extraction_msgs</depend>
  <depend>frontier_extraction_srvs</depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>